# RunAThing

./: .gitignore  DEVELOPMENT.md  README.md  REVIEW.md  RunAThing.code-workspace  TESTING.md  config.yaml  cookiecutter.json  explicit_deps.md  requirements.txt
.devcontainer/: devcontainer.json
docs/: README.md
env/: README.md
src/: README.md  main.py  test_config.yml  test_main.py
src/thing_templates/python_setup_cfg/: README.md  metadata.json
src/utils/: build_config.py
tests/: README.md  conftest.py
utils/: build_cookiecutter.py
{{cookiecutter.project_slug}}/: .datalayerdefinitions  .gitignore  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.env
{{cookiecutter.project_slug}}/.github/workflows/: build.yml
{{cookiecutter.project_slug}}/docs/: README.md  conf.py
{{cookiecutter.project_slug}}/src/: __init__.py
{{cookiecutter.project_slug}}/tests/: README.md  __init__.py  build_fixtures.py  test_thing.py
{{cookiecutter.project_slug}}/workflows/: __init__.py  sample_workflow.py
