{{ cookiecutter.template_components.header }}


[metadata]
name = {{ cookiecutter.project_name }}
version = file: VERSION
author = {{ cookiecutter.project_author }}
author_email = {{ cookiecutter.project_author_email }}
description = {{ cookiecutter.project_description }}
long_description = file: README.md
long_description_content_type = text/markdown
license = {{ cookiecutter.project_license }}

[bdist_wheel]
universal = 0

[options]
package_dir=
    =src
packages = find:
python_requires = >={{ cookiecutter.project_dependencies.python.min_version }}

[options.extras_require]
dev = 
    {% for dep in cookiecutter.project_dependencies.python.test_deps %}{{ dep }}
    {% endfor %}
